fix text overflow

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -65,7 +65,7 @@ margin-left:45px;
 .title {
 font-family:"fira sans";
 font-weight: 500;
-font-size: 1.6rem;
+font-size: 1.2rem;
 margin-top: 100px;
 }
 
@@ -85,6 +85,7 @@ line-height:150%;
 @media only screen and (max-width: 500px) {
         .titleinfo {
         font-size:16px;
+        width:85%
         }
 }
 
@@ -135,18 +136,20 @@ font-size:14px;
         .workinfo {
         font-size:16px;
 	float:left;
-	margin-left:100px;
-	width:80%;
+	margin-left:15%;
+	width:75%;
 	}
 }
 
 .work {
-margin-left:50px;
+margin-left:10px;
+margin-right:2%; 
 }
 
 @media only screen and (max-width: 500px){
 	.work {
-	margin-left:10px;
+	margin-left:2%;
+        margin-right:2%; 
 	}
 }
 
@@ -159,7 +162,7 @@ font-weight:100;
 
 @media only screen and (max-width: 500px) {
         .smalltext {
-        font-size:24px;
+        Font-size:1rem;
         }
 }
 
